--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -7,7 +7,7 @@
   }*/
   
   .hero-container {
-     background: url('./images/dsw.jpg') center center/cover no-repeat; 
+     background: url('./images/club.jpeg') center center/cover no-repeat; 
     height: 100vh;
     width: 100%;
     display: flex;
